==> opentx/opentx/radio/src/targets/gruvin9x/diskio.cpp <==
#include "opentx.h"
#include "diskio.h"
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD55	(55)		/* APP_CMD */
#define CMD58	(58)		/* READ_OCR */
#define CT_MMC		0x01		/* MMC ver 3 */
#define CT_SD1		0x02		/* SD ver 1 */
#define CT_SD2		0x04		/* SD ver 2 */
#define CT_SDC		(CT_SD1|CT_SD2)	/* SD */
#define CT_BLOCK	0x08		/* Block addressing */
#  define CS_LOW()  PORTB &= ~0x01    /* MMC CS = L */
#  define CS_HIGH() PORTB |= 0x01     /* MMC CS = H */
#  define CS_LOW()  PORTB &= ~0x10    /* MMC CS = L */
#  define CS_HIGH() PORTB |= 0x10     /* MMC CS = H */
#define SOCKPORT	PINB			/* Socket contact port */
#define SOCKWP		0x00 // not implemented /* Write protect switch */
#define SOCKINS		0x00 // not implemented /* Card detect switch */
#define	FCLK_SLOW()	SPCR = 0x52		/* Set slow clock (100k-400k) */

static
void power_on (void)
{
	// PORTE &= ~0x80;			// Socket power on
#ifndef SIMU
	for (Timer1 = 2; Timer1; );	// Wait for 20ms
#endif
	//PORTB = 0b10110101;		// Enable drivers
	//DDRB  = 0b11000111;

	SPCR = 0x52;			// Enable SPI function in mode 0
	SPSR = 0x00; // G: was 0x01;			// SPI 2x mode
}

static
void power_off (void)
{
	SPCR = 0;				/* Disable SPI function */
	// DDRB  = 0b11000000;		/* Disable drivers */
	// PORTB = 0b10110000;

	// PORTE |=  0x80;			/* Socket power off */
	Stat |= STA_NOINIT;
}
